test/fail/actor-class-star.mo
actor class C() : async* actor {} = {}
